@@ -57,22 +57,20 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
     @Autowired
     private LoanStatementDOMapper loanStatementDOMapper;
 
-    @Autowired
-    private LoanFileDOMapper loanFileDOMapper;
 
     @Override
     public RecombinationVO detail(Long orderId) {
 
-        List<UniversalCustomerVO> customers =  loanQueryDOMapper.selectUniversalCustomer(orderId);
-        for(UniversalCustomerVO universalCustomerVO:customers){
+        List<UniversalCustomerVO> customers = loanQueryDOMapper.selectUniversalCustomer(orderId);
+        for (UniversalCustomerVO universalCustomerVO : customers) {
             List<UniversalCustomerFileVO> files = loanQueryDOMapper.selectUniversalCustomerFile(Long.valueOf(universalCustomerVO.getCustomer_id()));
             universalCustomerVO.setFiles(files);
         }
 
         List<UniversalCreditInfoVO> credits = loanQueryDOMapper.selectUniversalCreditInfo(orderId);
-        for(UniversalCreditInfoVO universalCreditInfoVO:credits){
-            if(!StringUtils.isBlank(universalCreditInfoVO.getCustomer_id())){
-                universalCreditInfoVO.setRelevances(loanQueryDOMapper.selectUniversalRelevanceOrderIdByCustomerId(orderId,Long.valueOf(universalCreditInfoVO.getCustomer_id())));
+        for (UniversalCreditInfoVO universalCreditInfoVO : credits) {
+            if (!StringUtils.isBlank(universalCreditInfoVO.getCustomer_id())) {
+                universalCreditInfoVO.setRelevances(loanQueryDOMapper.selectUniversalRelevanceOrderIdByCustomerId(orderId, Long.valueOf(universalCreditInfoVO.getCustomer_id())));
             }
         }
 
@@ -81,7 +79,7 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
         recombinationVO.setTelephone_des(loanTelephoneVerifyDOMapper.selectByPrimaryKey(orderId));
         recombinationVO.setCredits(credits);
         recombinationVO.setHome(loanQueryDOMapper.selectUniversalHomeVisitInfo(orderId));
-        recombinationVO.setCurrent_msg(loanQueryDOMapper.selectUniversalApprovalInfo("usertask_telephone_verify",orderId));
+        recombinationVO.setCurrent_msg(loanQueryDOMapper.selectUniversalApprovalInfo("usertask_telephone_verify", orderId));
         recombinationVO.setRelevances(loanQueryDOMapper.selectUniversalRelevanceOrderId(orderId));
         recombinationVO.setSupplement(loanQueryDOMapper.selectUniversalSupplementInfo(orderId));
         recombinationVO.setMaterials(loanQueryDOMapper.selectUniversalMaterialRecord(orderId));
@@ -92,21 +90,21 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
 
     @Override
     public void update(TelephoneVerifyParam param) {
-        LoanOrderDO loanOrderDO = loanOrderDOMapper.selectByPrimaryKey(Long.valueOf(param.getOrder_id()),new Byte("0"));
+        LoanOrderDO loanOrderDO = loanOrderDOMapper.selectByPrimaryKey(Long.valueOf(param.getOrder_id()), null);
 
         Long loanCarInfoId = loanOrderDO.getLoanCarInfoId();
         Long loanFinancialPlanId = loanOrderDO.getLoanFinancialPlanId();
 
-        if(loanOrderDO!=null){
-            if(loanCarInfoId!=null){
+        if (loanOrderDO != null) {
+            if (loanCarInfoId != null) {
                 LoanCarInfoDO loanCarInfoDO = new LoanCarInfoDO();
                 loanCarInfoDO.setId(loanCarInfoId);
-                loanCarInfoDO.setGpsNum(StringUtils.isBlank(param.getCar_gps_num())?null:Integer.valueOf(param.getCar_gps_num()));
-                loanCarInfoDO.setCarKey(StringUtils.isBlank(param.getCar_key())?null:new Byte(param.getCar_key()));
+                loanCarInfoDO.setGpsNum(StringUtils.isBlank(param.getCar_gps_num()) ? null : Integer.valueOf(param.getCar_gps_num()));
+                loanCarInfoDO.setCarKey(StringUtils.isBlank(param.getCar_key()) ? null : new Byte(param.getCar_key()));
                 loanCarInfoDOMapper.updateByPrimaryKeySelective(loanCarInfoDO);
             }
-            if(loanFinancialPlanId!=null){
-                if(StringUtils.isNotBlank(param.getFinancial_cash_deposit()) || StringUtils.isNotBlank(param.getFinancial_extra_fee())) {
+            if (loanFinancialPlanId != null) {
+                if (StringUtils.isNotBlank(param.getFinancial_cash_deposit()) || StringUtils.isNotBlank(param.getFinancial_extra_fee())) {
                     LoanFinancialPlanDO loanFinancialPlanDO = new LoanFinancialPlanDO();
                     loanFinancialPlanDO.setId(loanFinancialPlanId);
                     loanFinancialPlanDO.setCashDeposit(StringUtils.isBlank(param.getFinancial_cash_deposit()) ? null : new BigDecimal(param.getFinancial_cash_deposit()));
@@ -118,7 +116,8 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
     }
 
     /**
-     *  导出 EXCEL
+     * 导出 EXCEL
+     *
      * @return
      */
     @Override
@@ -129,17 +128,18 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
 
     /**
      * 导出文件
+     *
      * @param telephoneVerifyParam
      * @return
      */
-    private String createExcelFile(TelephoneVerifyParam telephoneVerifyParam){
+    private String createExcelFile(TelephoneVerifyParam telephoneVerifyParam) {
         String startDate = telephoneVerifyParam.getStartDate();
         String endDate = telephoneVerifyParam.getEndDate();
-        String timestamp =  new SimpleDateFormat("yyyyMMdd").format(new Date());
+        String timestamp = new SimpleDateFormat("yyyyMMdd").format(new Date());
         Long id = SessionUtils.getLoginUser().getId();
-        String fileName = timestamp+id+".xlsx";
+        String fileName = timestamp + id + ".xlsx";
         //创建workbook
-        File file = new File(ossConfig.getDownLoadBasepath()+File.separator+fileName);
+        File file = new File(ossConfig.getDownLoadBasepath() + File.separator + fileName);
         FileOutputStream out = null;
         XSSFWorkbook workbook = null;
         try {
@@ -150,54 +150,54 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
             XSSFSheet sheet = workbook.createSheet();
 
 
-            ArrayList<String> header= Lists.newArrayList("申请单号","客户名称","证件类型","证件号",
-                    "业务员","合伙人团队","贷款银行","贷款金额","银行分期本金","gps数量","审核结果","审核状态","审核员","审核时间","备注"
+            ArrayList<String> header = Lists.newArrayList("申请单号", "客户名称", "证件类型", "证件号",
+                    "业务员", "合伙人团队", "贷款银行", "贷款金额", "银行分期本金", "gps数量", "审核结果", "审核状态", "审核员", "审核时间", "备注"
             );
             //申请单号	客户名称	证件类型	证件号	业务员	合伙人团队	贷款金额	gps数量	申请单状态	提交状态	备注	审核员	审核时间
             XSSFRow headRow = sheet.createRow(0);
-            for(int i=0;i<header.size();i++){
+            for (int i = 0; i < header.size(); i++) {
                 XSSFCell cell = headRow.createCell(i);
                 cell.setCellValue(header.get(i));
             }
-            XSSFRow row =null;
+            XSSFRow row = null;
             XSSFCell cell = null;
-            for(int i=0;i<list.size();i++){
+            for (int i = 0; i < list.size(); i++) {
                 TelephoneVerifyNodeOrdersVO telephoneVerifyNodeOrdersVO = list.get(i);
                 //创建行
-                row = sheet.createRow(i+1);
+                row = sheet.createRow(i + 1);
 
                 cell = row.createCell(0);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getOrder_id());
 
-                cell= row.createCell(1);
+                cell = row.createCell(1);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getCustomer_name());
                 //
 
-                cell= row.createCell(2);
+                cell = row.createCell(2);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getCustomer_card_type());
 
-                cell= row.createCell(3);
+                cell = row.createCell(3);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getCustomer_id_card());
 
-                cell= row.createCell(4);
+                cell = row.createCell(4);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getSaleman_name());
 
-                cell= row.createCell(5);
+                cell = row.createCell(5);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getPartner_name());
 
-                cell= row.createCell(6);
+                cell = row.createCell(6);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getBank());
 
-                cell= row.createCell(7);
+                cell = row.createCell(7);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getLoan_amount());
 
-                cell= row.createCell(8);
+                cell = row.createCell(8);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getBank_period_principal());
 
-                cell= row.createCell(9);
+                cell = row.createCell(9);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getGps_number());
 
-                cell= row.createCell(10);
+                cell = row.createCell(10);
                 cell.setCellValue(telephoneVerifyNodeOrdersVO.getAction());
 
                 cell = row.createCell(11);
@@ -216,44 +216,43 @@ public class TelephoneVerifyServiceImpl implements TelephoneVerifyService {
 
             }
             //文件宽度自适应
-            sheet.autoSizeColumn((short)0);
-            sheet.autoSizeColumn((short)1);
-            sheet.autoSizeColumn((short)2);
-            sheet.autoSizeColumn((short)3);
-            sheet.autoSizeColumn((short)4);
-            sheet.autoSizeColumn((short)5);
-            sheet.autoSizeColumn((short)6);
-            sheet.autoSizeColumn((short)7);
-            sheet.autoSizeColumn((short)8);
-            sheet.autoSizeColumn((short)9);
-            sheet.autoSizeColumn((short)10);
-            sheet.autoSizeColumn((short)11);
-            sheet.autoSizeColumn((short)12);
-            sheet.autoSizeColumn((short)13);
-            sheet.autoSizeColumn((short)14);
+            sheet.autoSizeColumn((short) 0);
+            sheet.autoSizeColumn((short) 1);
+            sheet.autoSizeColumn((short) 2);
+            sheet.autoSizeColumn((short) 3);
+            sheet.autoSizeColumn((short) 4);
+            sheet.autoSizeColumn((short) 5);
+            sheet.autoSizeColumn((short) 6);
+            sheet.autoSizeColumn((short) 7);
+            sheet.autoSizeColumn((short) 8);
+            sheet.autoSizeColumn((short) 9);
+            sheet.autoSizeColumn((short) 10);
+            sheet.autoSizeColumn((short) 11);
+            sheet.autoSizeColumn((short) 12);
+            sheet.autoSizeColumn((short) 13);
+            sheet.autoSizeColumn((short) 14);
 
             workbook.write(out);
             //上传OSS
             OSSClient ossClient = OSSUnit.getOSSClient();
-            String bucketName= ossConfig.getBucketName();
+            String bucketName = ossConfig.getBucketName();
             String diskName = ossConfig.getDownLoadDiskName();
-            OSSUnit.deleteFile(ossClient,bucketName,diskName+File.separator,fileName);
+            OSSUnit.deleteFile(ossClient, bucketName, diskName + File.separator, fileName);
             OSSUnit.uploadObject2OSS(ossClient, file, bucketName, diskName + File.separator);
         } catch (Exception e) {
-            Preconditions.checkArgument(false,e.getMessage());
-        }finally {
+            Preconditions.checkArgument(false, e.getMessage());
+        } finally {
             try {
-                if(out!=null){
+                if (out != null) {
                     out.close();
                 }
             } catch (IOException e) {
-                Preconditions.checkArgument(false,e.getMessage());
+                Preconditions.checkArgument(false, e.getMessage());
             }
         }
 
-        return ossConfig.getDownLoadDiskName()+File.separator+fileName;
+        return ossConfig.getDownLoadDiskName() + File.separator + fileName;
     }
-
 
 
 }
